# zuan-mlir

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
benchmarks/common/: CMakeLists.txt  MemRefUtils.h  verification.h
benchmarks/dyno/: CMakeLists.txt  README.md
benchmarks/dyno/matmul/: CMakeLists.txt  launcher.cpp  matmul.mlir
benchmarks/linalg/: CMakeLists.txt  runall.sh
benchmarks/linalg/conv_2d/: CMakeLists.txt  conv_2d.mlir  launcher.cpp
benchmarks/linalg/data/: .gitignore
benchmarks/linalg/dot-fp16/: CMakeLists.txt  dot-fp16.mlir  launcher.cpp  transform.txt
benchmarks/linalg/exp/: CMakeLists.txt  exp.mlir  launcher.cpp  transform.txt
benchmarks/linalg/fill-rng-2d/: CMakeLists.txt  fill-rng-2d.mlir  launcher.cpp  transform.txt
benchmarks/linalg/matmul/: CMakeLists.txt  launcher.cpp  matmul.mlir  transform.txt
benchmarks/linalg/matmul-fp16/: CMakeLists.txt  launcher.cpp  matmul-fp16.mlir  transform.txt
benchmarks/linalg/matmul-transpose-a/: CMakeLists.txt  launcher.cpp  matmul-transpose-a.mlir  transform.txt
benchmarks/linalg/matmul-transpose-b/: CMakeLists.txt  launcher.cpp  matmul-transpose-b.mlir  transform.txt
benchmarks/linalg/mmt4d/: CMakeLists.txt  launcher.cpp  mmt4d.mlir  transform.txt
benchmarks/linalg/quantized-matmul/: CMakeLists.txt  launcher.cpp  quantized-matmul.mlir  transform.txt
benchmarks/linalg/reduce/: CMakeLists.txt  launcher.cpp  reduce.mlir  transform.txt
benchmarks/linalg/reduce-2d/: CMakeLists.txt  launcher.cpp  reduce-2d.mlir  transform.txt
benchmarks/linalg/relu/: CMakeLists.txt  launcher.cpp  relu.mlir  transform.txt
benchmarks/linalg/rsqrt/: CMakeLists.txt  launcher.cpp  rsqrt.mlir  transform.txt
benchmarks/triton/: CMakeLists.txt  README.md  wrappergen.py
benchmarks/triton/attention/: CMakeLists.txt  attention.py  launcher.cpp
benchmarks/triton/matmul/: CMakeLists.txt  launcher.cpp  matmul.py
benchmarks/triton/saxpy/: CMakeLists.txt  launcher.cpp  saxpy.py
benchmarks/triton/vector_add/: CMakeLists.txt  launcher.cpp  vector_add.py
benchmarks/triton/vector_mul/: CMakeLists.txt  launcher.cpp  vector_mul.py
benchmarks/zuan/: README.md
benchmarks/zuan/matmul/: CMakeLists.txt  launcher.cpp  matmul.mlir  naive.cpp
cmake/: DynoBenchmarkKernels.cmake  DynoGoogleBenchmark.cmake  DynoHostTools.cmake  DynoKernelBuild.cmake  DynoKernelLowering.cmake  DynoRegressionKernels.cmake  DynoRewriteText.cmake  DynoTriton.cmake  README.md  ZuanTriton.cmake
docs/: formalism.md  kernel-building.md
include/Conversion/: DynoToVP.h  LinalgToDyno.h  LinalgToZuan.h  (+4 more)
regression/: CMakeLists.txt
regression/dyno/: CMakeLists.txt
regression/dyno/mask-gather-scatter/: CMakeLists.txt  driver.cpp
regression/dyno/reduction-3d-nonconsecutive/: driver.cpp
regression/dyno/reduction-3d-ordered/: CMakeLists.txt  driver.cpp
regression/dyno/reduction-maximumf-relaxed/: CMakeLists.txt  driver.cpp  kernel.mlir
regression/dyno/reduction-minimumf-strict/: CMakeLists.txt  driver.cpp  kernel.mlir
regression/dyno/softmax/: CMakeLists.txt  driver.cpp  kernel.mlir
regression/linalg/: CMakeLists.txt
regression/linalg/matmul-transpose-a/: CMakeLists.txt  driver.cpp
regression/linalg/reduce-2d-factorized/: CMakeLists.txt  driver.cpp  kernel.mlir
regression/linalg/reduce-2d-ordered/: driver.cpp
regression/linalg/reduce-parallel/: driver.cpp
regression/linalg/reduce-sequential/: CMakeLists.txt
regression/linalg/relu/: kernel.mlir
scripts/: build-dyno.sh  build-env.sh  build-llvm.sh  build-riscv-dyno.sh  build-riscv-llvm.sh  build-riscv-zuan.sh  build-zuan.sh  check-workspace-rename.sh  draw-linalg-figure.py  lower.sh  setup-triton.sh  workaround-gnutoolchain.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Dyno/: convert-to-vp.mlir  dim.mlir  linalg-reduce-ordered.mlir  matmul.mlir  reduction-accumulate-to-vp.mlir  reduction-modes.mlir  reduction-policy.mlir  reduction.mlir  roundtrip.mlir  slicing-memref-dim.mlir  softmax.mlir  store.mlir  type-inference.mlir  verify-diagnostics.mlir
test/Dyno/linalg-to-dyno/: linalg-fill.mlir  linalg-matmul.mlir
test/Dyno/strength-reduction/: splat-cast.mlir  step-to-splat.mlir
test/VP/: vp-binary.mlir  vp-cmp.mlir  vp-gather-scatter.mlir  vp-getvl-rvv.mlir  vp-getvl.mlir  vp-load.mlir  vp-reduction.mlir  vp-splat.mlir  vp-step-rvv.mlir  vp-store.mlir
test/Zuan/: convert-to-vp.mlir  dim.mlir  linalg2zuan.mlir  matmul.mlir  reduction.mlir  roundtrip.mlir  softmax.mlir  store.mlir  type-inference.mlir  verify-diagnostics.mlir
test/Zuan/linalg-to-zuan/: linalg-fill.mlir  linalg-matmul.mlir
test/Zuan/strength-reduction/: splat-cast.mlir  step-to-splat.mlir
test/lit/Dyno/: convert-to-vp.mlir  dim.mlir  linalg-reduce-ordered.mlir  matmul.mlir  reduction-accumulate.mlir  reduction-modes.mlir  slicing-memref-dim.mlir  store.mlir
test/lit/Dyno/strength-reduction/: step-to-splat.mlir
test/lit/VP/: vp-cmp.mlir  vp-gather-scatter.mlir  vp-getvl.mlir  vp-load.mlir  vp-splat.mlir  vp-store.mlir
test/runtime/: CMakeLists.txt
test/runtime/dyno/mask-gather-scatter/: kernel.mlir
test/runtime/dyno/reduction-3d-factorized/: CMakeLists.txt  driver.cpp  kernel.mlir
test/runtime/dyno/reduction-3d-nonconsecutive/: CMakeLists.txt  kernel.mlir
test/runtime/dyno/reduction-3d-ordered/: kernel.mlir
test/runtime/linalg/: CMakeLists.txt
test/runtime/linalg/matmul/: CMakeLists.txt  driver.cpp
test/runtime/linalg/reduce-2d-ordered/: CMakeLists.txt
test/runtime/linalg/reduce-parallel/: CMakeLists.txt  driver.cpp
test/runtime/linalg/reduce-sequential/: driver.cpp
test/runtime/linalg/relu/: CMakeLists.txt  driver.cpp
test/triton-shared/: complex-gather-scatter.mlir  layer_norm_fwd.mlir
tools/: CMakeLists.txt
tools/dyno-lsp/: CMakeLists.txt  dyno-lsp.cpp
tools/dyno-opt/: CMakeLists.txt  dyno-opt.cpp
tools/dyno-translate/: CMakeLists.txt  dyno-translate.cpp
tools/zuan-lsp/: CMakeLists.txt  zuan-lsp.cpp
tools/zuan-opt/: CMakeLists.txt  zuan-opt.cpp
tools/zuan-translate/: CMakeLists.txt  zuan-translate.cpp
(+98 files in other folders)
