add_subdirectory(conv_2d)
add_subdirectory(dot-fp16)
add_subdirectory(exp)
add_subdirectory(fill-rng-2d)
add_subdirectory(matmul)
add_subdirectory(matmul-fp16)
add_subdirectory(matmul-transpose-b)
add_subdirectory(matmul-transpose-a)
add_subdirectory(mmt4d)
add_subdirectory(quantized-matmul)
add_subdirectory(reduce)
add_subdirectory(reduce-2d)
add_subdirectory(relu)
add_subdirectory(rsqrt)
